--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@ style="width: 50%; flex-shrink: 0; padding: 8px; margin: 10px; display: block;">
 
 <br>
 
+<div id="pagination"></div>
+
 <div id="masterlist-container" style="height: 80vh; overflow-y: auto;">
   <div id="masterlist"></div>
 </div>
@@ -46,4 +48,7 @@ style="width: 50%; flex-shrink: 0; padding: 8px; margin: 10px; display: block;">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
 <script src="script.js"></script>
 </body>
+<footer>
+  <p>Spratz are a closed species owned by <a href="https://toyhou.se/Queued">Queued</a>, with help from <a href="https://toyhou.se/Void_And_Stars">Void_And_Stars</a>, <a href="https://toyhou.se/Runary">Runary</a>, <a href="https://toyhou.se/Mari-22">Mari-22</a>, <a href="https://toyhou.se/IggyThePsycho">IggyThePsycho</a>, and <a href="https://toyhou.se/UnsettledChaos">UnsettledChaos</a>!</p>
+</footer>
 </html>
