--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-<h1>Spratz Masterlist</h1>
+  <div style="text-align: center;">
+<img src="header.png" id = "header" alt="spratz header">
+  </div>
 
 <br>
 
