--- a/traits.html
+++ b/traits.html
@@ -47,7 +47,7 @@ style="width: 50%; flex-shrink: 0; padding: 8px; margin: 10px; display: block;">
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
-<script src="traitscript.js"></script>
+<script src="traitScript.js"></script>
 </body>
 <footer>
   <p>Spratz are a closed species owned by <a href="https://toyhou.se/Queued">Queued</a>, with help from <a href="https://toyhou.se/Void_And_Stars">Void_And_Stars</a>, <a href="https://toyhou.se/Runary">Runary</a>, <a href="https://toyhou.se/Mari-22">Mari-22</a>, <a href="https://toyhou.se/IggyThePsycho">IggyThePsycho</a>, and <a href="https://toyhou.se/UnsettledChaos">UnsettledChaos</a>!</p>
