--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
 
-  <div style="text-align: center;">
-<img src="header.png" id = "header" alt="spratz header">
-  </div>
+<div id= "headerstack" style="text-align: center;">
+  <img src="header.png" id = "header" alt="spratz header">
+   <div id = "dotcontainer"> </div>
+</div>
 
 <br>
 
@@ -18,11 +19,16 @@
 
 <br>
 
-<h1><a href="masterlist.html">Masterlist</a></h2>
+<div id="sidestack" style="text-align: center;">
+  <div id="sidedotcontainer"> </div>
+<a href="masterlist.html"><img src="MLheader.png" id="sideheader" alt="masterlist header"></a></div>
 
 <br>
 
-<h1><a href="traits.html">Traits</a></h2>
+<div id="sidestack" style="text-align: center;">
+  <div id="sidedotcontainer"> </div>
+<a href="traits.html"><img src="traitheader.png" id="sideheader" alt="trait header"></a>
+</div>
 
 
 
