--- a/masterlist.html
+++ b/masterlist.html
@@ -8,11 +8,11 @@
 </head>
 <body>
 
-  <div style="text-align: center;">
-    <a href="index.html">
-<img src="header.png" id = "header" alt="spratz header">
-    </a>
-  </div>
+<div id="sidestack" style="text-align: center;">
+<div id="sidedotcontainer"> </div>
+<a href="index.html"><img src="MLheader.png" id="sideheader" alt="trait header"></a>
+</div>
+<br>
 
 <br>
 
