--- a/traits.html
+++ b/traits.html
@@ -8,12 +8,10 @@
 </head>
 <body>
 
-  <div style="text-align: center;">
-    <a href="index.html">
-<img src="header.png" id = "header" alt="spratz header">
-    </a>
-  </div>
-
+<div id="sidestack" style="text-align: center;">
+<div id="sidedotcontainer"> </div>
+<a href="index.html"><img src="traitheader.png" id="sideheader" alt="trait header"></a>
+</div>
 <br>
 
 <h3><a href="https://discord.gg/CAvADKQTwG">Check out the Discord to participate!</a></h3>
