--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 <a href="traits.html"><img src="traitheader.png" id="sideheader" alt="trait header"></a>
 </div>
 
+<br>
 
+<h3><a href="guide.html">Guide</a></h3>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
 <script src="script.js"></script>
