--- a/traits.html
+++ b/traits.html
@@ -49,5 +49,6 @@ style="width: 50%; flex-shrink: 0; padding: 8px; margin: 10px; display: block;">
 </body>
 <footer>
   <p>Spratz are a closed species owned by <a href="https://toyhou.se/Queued">Queued</a>, with help from <a href="https://toyhou.se/Void_And_Stars">Void_And_Stars</a>, <a href="https://toyhou.se/Runary">Runary</a>, <a href="https://toyhou.se/Mari-22">Mari-22</a>, <a href="https://toyhou.se/Rudy">Rudy</a>, <a href="https://toyhou.se/IggyThePsycho">IggyThePsycho</a>, and <a href="https://toyhou.se/UnsettledChaos">UnsettledChaos</a>!</p>
+  <p> Credit to <a href="https://toyhou.se/Mari-22">Mari-22</a> for the site background art, and to <a href="https://toyhou.se/Queued">Queued</a> for all other assets.</p>
 </footer>
 </html>
