added home header

--- a/guide.html
+++ b/guide.html
@@ -4,13 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spratz Masterlist</title>
+  <link rel="icon" type="image/x-icon" href="favico.png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div id="sidestack" style="text-align: center;">
 <div id="sidedotcontainer"> </div>
-<a href="index.html"><img src="MLheader.png" id="sideheader" alt="trait header"></a>
+<a href="guide.html"><img src="guideheader.png" id="sideheader" alt="guide header"></a>
+</div>
+<br>
+
+<br>
+
+<div id="sidestack" style="text-align: center;">
+<div id="sidedotcontainer"> </div>
+<a href="index.html"><img src="quiltrightheader.png" id="sideheader" alt="home header"></a>
 </div>
 <br>
 
@@ -78,7 +87,7 @@
 
 <p>2) Tails are no longer than TWICE the distance from the chest to the hindquarters.</p>
 
-<p>3) Handles generally reach no further than half of the back.</p>
+<p>3) Handles are generally no longer than the length from the nozzle to the back of the ears.</p>
 
 <p>All other parts are NOT unlimited without the use of certain traits, but they do not have a specific limit.</p>
 
