--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spratz Homepage</title>
+  <link rel="icon" type="image/x-icon" href="favico.png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,8 +15,17 @@
 </div>
 
 <br>
+<br>
 
 <h3><a href="https://discord.gg/CAvADKQTwG">Check out the Discord to participate!</a></h3>
+
+<br>
+<br>
+
+<div id="sidestack" style="text-align: center;">
+  <div id="sidedotcontainer"> </div>
+<a href="guide.html"><img src="guideheader.png" id="sideheader" alt="guide header"></a>
+</div>
 
 <br>
 
@@ -29,10 +39,6 @@
   <div id="sidedotcontainer"> </div>
 <a href="traits.html"><img src="traitheader.png" id="sideheader" alt="trait header"></a>
 </div>
-
-<br>
-
-<h3><a href="guide.html">Guide</a></h3>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
 <script src="script.js"></script>
