--- a/masterlist.html
+++ b/masterlist.html
@@ -4,16 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spratz Masterlist</title>
+  <link rel="icon" type="image/x-icon" href="favico.png">
+  <script>
+    const favicon = document.getElementsById("favicon");
+    function CSSmover() {
+      favicon.setAttribute("href", "013yovfwoebfq.png");
+    }
+  </script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div id="sidestack" style="text-align: center;">
 <div id="sidedotcontainer"> </div>
-<a href="index.html"><img src="MLheader.png" id="sideheader" alt="trait header"></a>
+<a href="masterlist.html"><img src="MLheader.png" id="sideheader" alt="masterlist header"></a>
 </div>
 <br>
 
+<br>
+
+<div id="sidestack" style="text-align: center;">
+<div id="sidedotcontainer"> </div>
+<a href="index.html"><img src="quiltleftheader.png" id="sideheader" alt="home header"></a>
+</div>
 <br>
 
 <h3><a href="https://discord.gg/CAvADKQTwG">Check out the Discord to participate!</a></h3>
