--- a/traits.html
+++ b/traits.html
@@ -4,13 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spratz Traits</title>
+  <link rel="icon" type="image/x-icon" href="favico.png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div id="sidestack" style="text-align: center;">
 <div id="sidedotcontainer"> </div>
-<a href="index.html"><img src="traitheader.png" id="sideheader" alt="trait header"></a>
+<a href="traits.html"><img src="traitheader.png" id="sideheader" alt="trait header"></a>
+</div>
+<br>
+
+<div id="sidestack" style="text-align: center;">
+<div id="sidedotcontainer"> </div>
+<a href="index.html"><img src="quiltrightheader.png" id="sideheader" alt="home header"></a>
 </div>
 <br>
 
