finished base art

--- a/guide.html
+++ b/guide.html
@@ -25,10 +25,6 @@
 
 <br>
 
-<h3><a href="https://discord.gg/CAvADKQTwG">Check out the Discord to participate!</a></h3>
-
-<br>
-
 <h3>The Common Spratz</h3>
 
 <br>
@@ -109,15 +105,17 @@
 
 <div id="guidestack" style="text-align: center; width: 50vh">
 <div id="sidedotcontainer"> </div>
-<img src="ex1.png" id="sideheader" alt="trait header">
+<img src="ex1.png" id="sideheader" alt="common spratz example 1">
 </div>
 
 <br>
 
 <div id="guidestack" style="text-align: center; width: 49vh">
 <div id="sidedotcontainer"> </div>
-<img src="ex2.png" id="sideheader" alt="trait header">
+<img src="ex2.png" id="sideheader" alt="common spratz example 2">
 </div>
+
+<br>
 
 </body>
 <footer>
