--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
 </div>
 
 <br>
-<br>
 
-<h3><a href="https://discord.gg/CAvADKQTwG">Check out the Discord to participate!</a></h3>
+<div id="sidestack" style="text-align: center;">
+  <div id="sidedotcontainer"> </div>
+<a href="https://discord.gg/CAvADKQTwG"><img src="discord.png" id="sideheader" alt="discord header"></a>
+</div>
 
-<br>
 <br>
 
 <div id="sidestack" style="text-align: center;">
