--- a/guide.html
+++ b/guide.html
@@ -66,7 +66,7 @@
 
 <p>Neck height can vary somewhat. </p>
 
-<p>Ears do not have to be cat ears, but they do need to be similar. </p>
+<p>Ears do not have to be cat ears, but they do need to be somewhat similar to them. </p>
 
 <p>Inner ears and pawpads are made of bottle.</p>
 
@@ -85,7 +85,7 @@
 
 <p>3) Handles are generally no longer than the length from the nozzle to the back of the ears.</p>
 
-<p>All other parts are NOT unlimited without the use of certain traits, but they do not have a specific limit.</p>
+<p>These rules apply under the assumption that these parts do not have the Oversized trait. For example, if the handle is Oversized, the ears are not able to have that same length if they are not also Oversized. All other parts do NOT have an unlimited size, but they do not have a specific limit.</p>
 
 <br> 
 
