--- a/guide.html
+++ b/guide.html
@@ -50,7 +50,7 @@
 
 <p>Spratz can optionally be drawn with a simple mouth where one would expect it. This is only for expressing—there is still a layer of bottle under it preventing anything from getting into the bottle.</p>
 
-<p>The head should be entirely bottle except for a "mask" of fur that also surrounds the eyes and ears. This mask can also be drawn with patches of fur or bottle on either side. None of the mask is present on the neck or handle, and it does not touch the nozzle or trigger.</p>
+<p>The head should be entirely bottle except for a "mask" of fur that also surrounds the eyes and ears. This mask can also be drawn with patches of fur or bottle on either side. None of the mask is present on the neck or handle, and it does not touch the nozzle or trigger, nor is it around the mouth.</p>
 
 <p>Everything below the collar is considered the body. The body of the Spratz must be between 20% and 80% bottle. Excess traits added to the Spratz do not count towards this percentage.</p>
 
@@ -103,6 +103,7 @@
 
 <br>
 
+
 <div id="guidestack" style="text-align: center; width: 50vh">
 <div id="sidedotcontainer"> </div>
 <img src="ex1.png" id="sideheader" alt="common spratz example 1">
@@ -113,6 +114,46 @@
 <div id="guidestack" style="text-align: center; width: 49vh">
 <div id="sidedotcontainer"> </div>
 <img src="ex2.png" id="sideheader" alt="common spratz example 2">
+</div>
+
+<br>
+<br>
+<br>
+<br>
+
+<h3 id="boundless">The Common Boundless Spratz</h3>
+
+<br>
+
+<div id="guidestack" style="text-align: center;">
+<div id="sidedotcontainer"> </div>
+<img src="bex0.png" id="sideheader" alt="guide boundless example">
+</div>
+
+<br>
+
+<div id="guidestack" style="text-align: center; height: 25vh; width: 65vh;">
+<div id="sidedotcontainer"> </div>
+<img src="bex1.png" id="sideheader" alt="guide boundless example" style="height: 25vh; width: auto;">
+</div>
+
+
+<br>
+
+<div id="guide">
+
+<h4>General Information</h4>
+
+<p>Boundless Spratz follow the normal Spratz guide and really only have one major difference . . . they don't have a face.</p>
+
+<p> Instead of the hole in their head allowing for a view of their inner mechanism, it seems to just contain solid, black void instead. But it is not always only this void! Because of the lack of a nozzle, these Spratz have learned very, very fine control over the substance that leaks from their head. While it overflows if they are particularly unfocused, stressed, or if they have not been accustomed to being boundless for very long, they are able to manipulate this substance the rest of the time. This leaking substance can be manipulated into the shape of wings, tendrils, arms, or any other sort of limb. It can also be manipulated to mimic a simple face. </p>
+
+<p> Boundless Spratz also have their trigger in a different place. It will always be somewhere along the back of the spine, whether on the neck, body, or tail. Although the trigger has moved, the hole that the trigger has in order to slot into the neck has not. This hole is required, unlike in standard Spratz, and should be a standard circle or square unless using Shaped Parts [UC].</p>
+
+<p> Despite the fine control, Boundless Spratz often leak substance from the collar, as even with the divine intervention, Spratz are not meant to survive having their face removed. </p>
+
+</p>(The leakage from the collar must be shown on the Masterlist image, but the leakage from the face is optional.)</p>
+
 </div>
 
 <br>
