--- a/guide.html
+++ b/guide.html
@@ -68,7 +68,7 @@
 
 <p>Ears do not have to be cat ears, but they do need to be somewhat similar to them. </p>
 
-<p>Inner ears and pawpads are made of bottle.</p>
+<p>Inner ears and pawpads are made of bottle. However, they do not have to have the same color as the rest of the bottle when using Patternless [C]. The nozzle, trigger, and collar also have this same color allowance. </p>
 
 <p>Irises must match one of the colors of the bottle unless using non-common eye traits.</p>
 
