--- a/masterlist.html
+++ b/masterlist.html
@@ -5,15 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spratz Masterlist</title>
   <link rel="icon" type="image/x-icon" href="favico.png">
-  <script>
-    const favicon = document.getElementsById("favicon");
+  <!--<script>
+    const favicon = document.getElementById("favicon");
     function CSSmover() {
       favicon.setAttribute("href", "013yovfwoebfq.png");
-    }
+  }-->
   </script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<!--<div id="siteMask">
+  <div id= "headerstack" style="text-align: center;">
+  <img src="header.png" id = "header" alt="spratz header">
+  <div id = "dotcontainer"> 
+  </div>
+  </div>
+  <br>
+  TESTING! Be back soon!
+</div>-->
 
 <div id="sidestack" style="text-align: center;">
 <div id="sidedotcontainer"> </div>
@@ -64,7 +73,7 @@ style="width: 50%; flex-shrink: 0; padding: 8px; margin: 10px; display: block;">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
 <script src="masterlistScript.js"></script>
 </body>
-<footer>
+<footer id="bottomFooter">
   <p>Spratz are a closed species owned by <a href="https://toyhou.se/Queued">Queued</a>, with help from <a href="https://toyhou.se/Void_And_Stars">Void_And_Stars</a>, <a href="https://toyhou.se/Runary">Runary</a>, <a href="https://toyhou.se/Mari-22">Mari-22</a>, <a href="https://toyhou.se/Rudy">Rudy</a>, <a href="https://toyhou.se/IggyThePsycho">IggyThePsycho</a>, and <a href="https://toyhou.se/UnsettledChaos">UnsettledChaos</a>!</p>
   <p> Credit to <a href="https://toyhou.se/Mari-22">Mari-22</a> for the site background art, and to <a href="https://toyhou.se/Queued">Queued</a> for all other assets.</p>
 </footer>
