--- a/traits.html
+++ b/traits.html
@@ -8,6 +8,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<!--<div id="siteMask">
+  <div id= "headerstack" style="text-align: center;">
+  <img src="header.png" id = "header" alt="spratz header">
+  <div id = "dotcontainer"> 
+  </div>
+  </div>
+  <br>
+  TESTING! Be back soon!
+</div>-->
 
 <div id="sidestack" style="text-align: center;">
 <div id="sidedotcontainer"> </div>
