--- a/guide.html
+++ b/guide.html
@@ -161,7 +161,7 @@
 
 <p> Despite the fine control, Boundless Spratz often leak substance from the collar, as even with the divine intervention, Spratz are not meant to survive having their face removed. </p>
 
-</p>(The leakage from the collar must be shown on the Masterlist image, but the leakage from the face is optional.)</p>
+</p>(Substance coming from either the face or the collar must be shown in the Masterlist image.)</p>
 
 </div>
 
