--- a/masterlist.html
+++ b/masterlist.html
@@ -68,6 +68,8 @@ style="width: 50%; flex-shrink: 0; padding: 8px; margin: 10px; display: block;">
   <div id="masterlist"></div>
 </div>
 
+<div id="pagination2"></div>
+
 <br>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
