images, new rules

--- a/guide.html
+++ b/guide.html
@@ -61,7 +61,7 @@
 
 <p>The head should be entirely bottle except for a "mask" of fur that also surrounds the eyes and ears. This mask can also be drawn with patches of fur or bottle on either side. None of the mask is present on the neck or handle, and it does not touch the nozzle or trigger, nor is it around the mouth.</p>
 
-<p>Everything below the collar is considered the body. The body of the Spratz must be between 20% and 80% bottle. Excess traits added to the Spratz do not count towards this percentage.</p>
+<p>Everything below the collar is considered the body. The body of the Spratz must be (roughly) between 20% and 80% bottle. Excess traits added to the Spratz do not count towards this percentage.</p>
 
 <br>
 
@@ -95,6 +95,40 @@
 <p>3) Handles are generally no longer than the length from the nozzle to the back of the ears.</p>
 
 <p>These rules apply under the assumption that these parts do not have the Oversized trait. For example, if the handle is Oversized, the ears are not able to have that same length if they are not also Oversized. All other parts do NOT have an unlimited size, but they do not have a specific limit.</p>
+
+<br> 
+
+<hr>
+
+<br>
+
+<h4>Keep in mind:</h4>
+<p> There are things that should be kept in mind when submitting a design or redesign.<p>
+<ul>
+  <li>If accessories are present, include easy to read views that do not have them.
+    <ul>
+      <li>A good rule of thumb is that it should generally be no smaller than half of the equivalent size of the main image!
+    </ul>
+  </li>
+  <li>If External Companions [R] is used, they should be drawn off to the side of the design and labelled.</li>
+  <li>If a substance add-on is used, a view of the substance must be shown</li>
+  <li>Make use of the notes section during the submission process! The following traits should be specified:
+    <ul>
+      <li>Base substances aside from water (the flavor or specific substance)</li>
+      <li>Inorganic/Organic Growth (the type of growth)</li>
+      <li>Shaped Bottle Parts [UC] (if it's the handle, trigger, etc)</li>
+      <li>Unusual Bottle [UC] (the texture that is used)</li>
+      <li>Unusual Parts [UC] (the parts that are used)</li>
+      <li>Unusual Tail [UC] (the tail that is used)</li>
+      <li>Extra Parts (either version) (the parts that are duplicated)</li>
+      <li>Glowing Parts [R] (the parts that are glowing)</li>
+      <li>Object Tail [R] (the type of object)</li>
+      <li>Odd Paws [R] (the type of paws)</li>
+      <li>Major/Minor Abnormality (the abnormality -- only one per use of the trait!)</li>
+      <li>Oversized Parts [S] (the parts that are oversized -- only one per use of the trait!)</li>
+    </ul>
+  </li>
+</ul>
 
 <br> 
 
@@ -157,9 +191,9 @@
 
 <p> Instead of the hole in their head allowing for a view of their inner mechanism, it seems to just contain solid, black void instead. But it is not always only this void! Because of the lack of a nozzle, these Spratz have learned very, very fine control over the substance that leaks from their head. While it overflows if they are particularly unfocused, stressed, or if they have not been accustomed to being boundless for very long, they are able to manipulate this substance the rest of the time. This leaking substance can be manipulated into the shape of wings, tendrils, arms, or any other sort of limb. It can also be manipulated to mimic a simple face. </p>
 
-<p> Boundless Spratz also have their trigger in a different place. It will always be somewhere along the back of the spine, whether on the neck, body, or tail. Although the trigger has moved, the hole that the trigger has in order to slot into the neck has not. This hole is required, unlike in standard Spratz, and should be a standard circle or square unless using Shaped Parts [UC].</p>
+<p> Boundless Spratz also have their trigger in a different place. It will always be somewhere along the back of the spine, whether on the neck, body, or tail. Although the trigger has moved, the hole that the trigger has in order to slot into the neck has not. This hole is required, unlike in standard Spratz, and should be a standard circle or square unless using Shaped Bottle Parts [UC].</p>
 
-<p> Despite the fine control, Boundless Spratz often leak substance from the collar, as even with the divine intervention, Spratz are not meant to survive having their face removed. </p>
+<p> Despite the fine control, Boundless Spratz often leak substance from the collar, as even with the divine intervention, Spratz are not meant to survive having their face removed. The Leaking Substance [E] trait may optionally be included on a Boundless design without the need for an additional Exclusive trait!</p>
 
 </p>(Substance coming from either the face or the collar must be shown in the Masterlist image.)</p>
 
