--- a/guide.html
+++ b/guide.html
@@ -115,7 +115,7 @@
   <li>Make use of the notes section during the submission process! The following traits should be specified:
     <ul>
       <li>Base substances aside from water (the flavor or specific substance)</li>
-      <li>Inorganic/Organic Growth (the type of growth)</li>
+      <li>Inorganic/Plant Growth (the type of growth)</li>
       <li>Shaped Bottle Parts [UC] (if it's the handle, trigger, etc)</li>
       <li>Unusual Bottle [UC] (the texture that is used)</li>
       <li>Unusual Parts [UC] (the parts that are used)</li>
